--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     
-    "react-scripts": "3.1.2",
+    "react-scripts": "3.1.2"
     
   },
   "homepage": "https://johari9292.github.io",
